Fix gap on sides of horizontal header

--- a/src/resources/postcss/tribe-common-admin/settings/grid-elements/_elements.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/grid-elements/_elements.pcss
@@ -26,15 +26,4 @@
 			grid-column: 1 / span 2;
 		}
 	}
-
-	.tec-settings__button {
-		color: var(--tec-admin-core-blue-50);
-		font-size: var(--tec-font-size-2);
-		line-height: var(--tec-line-height-1);
-		padding: var(--tec-spacer-1) var(--tec-spacer-2);
-
-		@media screen and (max-width: 782px) {
-			padding: var(--tec-spacer-1) var(--tec-spacer-2);
-		}
-	}
 }
