--- a/src/resources/postcss/tribe-common-admin/settings/grid-elements/_header.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/grid-elements/_header.pcss
@@ -139,12 +139,13 @@
 
 		@media (--viewport-xsmall) {
 			border-bottom: 1px solid var(--tec-admin-core-grey-10);
+			margin: var(--tec-spacer-3) 0 0;
 			padding-bottom: var(--tec-spacer-0);
 		}
 
 		@media (--viewport-xlarge) {
 			grid-column: 1 / span 2;
-			margin: 0 var(--tec-spacer-7);
+			padding: 0 var(--tec-spacer-7);
 
 			&:not(:first-child) {
 				margin-top: 0;
